Added file size column to the completed encodes list.

--- a/VidCoder/Resources/MainRes.resx
+++ b/VidCoder/Resources/MainRes.resx
@@ -652,4 +652,7 @@
 
 {0}</value>
   </data>
+  <data name="FileSizeColumnHeader" xml:space="preserve">
+    <value>Size</value>
+  </data>
 </root>
