--- a/VidCoder/Resources/Translations/EnumsRes.it.resx
+++ b/VidCoder/Resources/Translations/EnumsRes.it.resx
@@ -145,7 +145,7 @@
     <value>Veloce</value>
   </data>
   <data name="Default" xml:space="preserve">
-    <value>Impostazione Predefinita</value>
+    <value>Impostazione predefinita</value>
   </data>
   <data name="DeinterlacePreset_bob" xml:space="preserve">
     <value>Bob</value>
