--- a/VidCoder/Resources/Translations/ChapterMarkersRes.it.resx
+++ b/VidCoder/Resources/Translations/ChapterMarkersRes.it.resx
@@ -99,7 +99,7 @@
 		<value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.3500.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
 	</resheader>
   <data name="ChapterMarkersDialogTitle">
-    <value xml:space="preserve">Marcatori Capitolo</value>
+    <value xml:space="preserve">Marcatori capitolo</value>
   </data>
   <data name="DefaultChapterNamesRadioButton">
     <value xml:space="preserve">Utilizzare i nomi predefiniti del capitolo</value>
