Fixed Open App Data folder for desktop bridge. Disabled features that require calling other processes in desktop bridge. Added (Installer) to full version name of installed app to distinguish from Windows Store version more easily in add/remove programs.

--- a/VidCoder/Resources/PreviewRes.resx
+++ b/VidCoder/Resources/PreviewRes.resx
@@ -202,4 +202,7 @@
   <data name="VideoErrorTitle" xml:space="preserve">
     <value>Video Error</value>
   </data>
+  <data name="PlaySourceDisabledAppxToolTip" xml:space="preserve">
+    <value>Windows store version cannot play DVD or Blu-ray source as it is not allowed to launch other processes.</value>
+  </data>
 </root>
