--- a/VidCoder/Resources/EncodingRes.resx
+++ b/VidCoder/Resources/EncodingRes.resx
@@ -935,7 +935,7 @@ Bicubic: This is an OpenCL hardware accelerated scaling algorithm.</value>
     <value>Scaling algorithm:</value>
   </data>
   <data name="RotationLabel" xml:space="preserve">
-    <value>Rotation:</value>
+    <value>Rotation</value>
   </data>
   <data name="ClosePresetsListToolTip" xml:space="preserve">
     <value>Close the presets list</value>
@@ -1048,5 +1048,8 @@ Bicubic: This is an OpenCL hardware accelerated scaling algorithm.</value>
   <data name="CustomFilterToolTipKeysLabel" xml:space="preserve">
     <value>Keys:</value>
     <comment>The label for the "keys" portion of the custom filter tooltip.</comment>
+  </data>
+  <data name="PaddingLabel" xml:space="preserve">
+    <value>Padding</value>
   </data>
 </root>
