--- a/VidCoder/Resources/MiscRes.resx
+++ b/VidCoder/Resources/MiscRes.resx
@@ -255,4 +255,7 @@
   <data name="ChooseNamePicker" xml:space="preserve">
     <value>Choose a name for the picker:</value>
   </data>
+  <data name="ExceptionDialogSubTextReported" xml:space="preserve">
+    <value>The program needs to close, but the error will be automatically reported.</value>
+  </data>
 </root>
