--- a/VidCoder/Resources/Translations/EnumsRes.id.resx
+++ b/VidCoder/Resources/Translations/EnumsRes.id.resx
@@ -117,150 +117,131 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="AudioSelection" xml:space="preserve">
-    <value>音訊選擇</value>
+  <data name="Anamorphic_Custom" xml:space="preserve">
+    <value>Custom</value>
   </data>
-  <data name="BurnInCheckBox" xml:space="preserve">
-    <value>內嵌</value>
+  <data name="Anamorphic_Loose" xml:space="preserve">
+    <value>Loose</value>
   </data>
-  <data name="DefaultCheckBox" xml:space="preserve">
-    <value>預設</value>
+  <data name="Anamorphic_None" xml:space="preserve">
+    <value>None</value>
   </data>
-  <data name="ForeignAudioSearchRadioButton" xml:space="preserve">
-    <value>外語音訊搜尋</value>
+  <data name="Anamorphic_Strict" xml:space="preserve">
+    <value>Ketat</value>
   </data>
-  <data name="IncludeAllTracksRadioButton" xml:space="preserve">
-    <value>所有軌道</value>
+  <data name="CombDetect_fast" xml:space="preserve">
+    <value>Cepat</value>
   </data>
-  <data name="LanguagesRadioButton" xml:space="preserve">
-    <value>語言</value>
+  <data name="CombDetect_permissive" xml:space="preserve">
+    <value>Lebih kurang sensitif</value>
+    <comment>This mode allows higher levels of combing before triggering.</comment>
   </data>
-  <data name="OnlyIfDifferentFromAudioCheckBox" xml:space="preserve">
-    <value>僅於與音訊語言不同時</value>
-    <comment>Label for checkbox on subtitle picker. When checked, it will only include the subtitle if it's a different language from the chosen audio track.</comment>
+  <data name="Custom" xml:space="preserve">
+    <value>Custom</value>
   </data>
-  <data name="SubtitleSelection" xml:space="preserve">
-    <value>字幕選擇</value>
+  <data name="Decomb_Bob" xml:space="preserve">
+    <value>Bob</value>
   </data>
-  <data name="WindowTitle" xml:space="preserve">
-    <value>選取器: {0}</value>
+  <data name="Decomb_Fast" xml:space="preserve">
+    <value>Cepat</value>
   </data>
-  <data name="TitleSelection" xml:space="preserve">
-    <value>標題選擇</value>
+  <data name="Default" xml:space="preserve">
+    <value>Default</value>
   </data>
-  <data name="PickerButtonFormat" xml:space="preserve">
-    <value>選取器: {0}</value>
-    <comment>{0} is the name of the picker. This string shows up on the picker split button.</comment>
+  <data name="DeinterlacePreset_bob" xml:space="preserve">
+    <value>Bob</value>
+    <comment>A deinterlace method named "Bob". The original name most likely refers to an object bobbing up and down.</comment>
   </data>
-  <data name="OutputLocation" xml:space="preserve">
-    <value>輸出位置</value>
+  <data name="DeinterlacePreset_eedi2" xml:space="preserve">
+    <value>EEDI2</value>
   </data>
-  <data name="OverrideDirectoryCheckBox" xml:space="preserve">
-    <value>覆寫資料夾:</value>
+  <data name="DeinterlacePreset_eedi2bob" xml:space="preserve">
+    <value>EEDI2 Bob</value>
   </data>
-  <data name="PickerHelpText" xml:space="preserve">
-    <value>自動選擇標題、音訊、字幕及目標資料夾</value>
+  <data name="DeinterlacePreset_skipspatial" xml:space="preserve">
+    <value>Skip spasial Check</value>
   </data>
-  <data name="AutoQueueOnScanCheckBox" xml:space="preserve">
-    <value>掃描後自動排入佇列</value>
+  <data name="Deinterlace_Decomb" xml:space="preserve">
+    <value>Decomb</value>
   </data>
-  <data name="AutoEncodeOnScanCheckBox" xml:space="preserve">
-    <value>掃描後開始編碼</value>
+  <data name="Deinterlace_Yadif" xml:space="preserve">
+    <value>Yadif</value>
   </data>
-  <data name="UseGlobalSettingToolTip" xml:space="preserve">
-    <value>使用全域設定</value>
-    <comment>Label for the "indeterminate" checkbox state that lets the user know that this will fall back to the global setting</comment>
+  <data name="DenoisePreset_light" xml:space="preserve">
+    <value>Ringan</value>
   </data>
-  <data name="PresetOverrideToolTip" xml:space="preserve">
-    <value>此將覆寫主視窗已選取的任何設定。</value>
+  <data name="DenoisePreset_medium" xml:space="preserve">
+    <value>Sedang</value>
   </data>
-  <data name="EncodingSection" xml:space="preserve">
-    <value>編碼</value>
-    <comment>The header for the Encoding section in the Picker window.</comment>
+  <data name="DenoisePreset_strong" xml:space="preserve">
+    <value>Kuat</value>
   </data>
-  <data name="PostEncodingSection" xml:space="preserve">
-    <value>後編碼</value>
-    <comment>Header for the post-encoding section in the picker window.</comment>
+  <data name="DenoisePreset_ultralight" xml:space="preserve">
+    <value>Ultralight</value>
   </data>
-  <data name="SendFileToLabel" xml:space="preserve">
-    <value>傳送檔案至:</value>
-    <comment>Label for the option to run a program after encoding each file.</comment>
+  <data name="DenoiseTune_animation" xml:space="preserve">
+    <value>Animasi</value>
   </data>
-  <data name="PostEncodeArgumentsLabel" xml:space="preserve">
-    <value>參數:</value>
-    <comment>The label for the arguments to pass to the post-encode executable.</comment>
+  <data name="DenoiseTune_film" xml:space="preserve">
+    <value>Film</value>
   </data>
-  <data name="PostEncodeArgumentsToolTip" xml:space="preserve">
-    <value>要傳遞給程式的參數，使用 {file} 作為檔輸出路徑，{folder} 作為資料夾路徑，或其他路徑選項如 {title} 及 {date} (請參見命名格式)。</value>
-    <comment>Tool tip for the post-encode arguments UI. Do not translate {file} .</comment>
+  <data name="DenoiseTune_grain" xml:space="preserve">
+    <value>Butiran</value>
   </data>
-  <data name="PresetDisabledForPickerToolTip" xml:space="preserve">
-    <value>選取器已指定預設編碼。</value>
+  <data name="DenoiseTune_highmotion" xml:space="preserve">
+    <value>Gerak Cepat</value>
   </data>
-  <data name="AddLanguageButton" xml:space="preserve">
-    <value>新增語言</value>
+  <data name="Denoise_HQDN3D" xml:space="preserve">
+    <value>hqdn3d</value>
   </data>
-  <data name="AllTracksForTheseLanguagesRadioButton" xml:space="preserve">
-    <value>這些語言的所有音軌</value>
+  <data name="Denoise_NLMeans" xml:space="preserve">
+    <value>NL-Means</value>
   </data>
-  <data name="AllTracksForThisLanguageRadioButton" xml:space="preserve">
-    <value>此語言的所有音軌</value>
+  <data name="EncodeCompleteActionType_CloseProgram" xml:space="preserve">
+    <value>Tutup VidCoder</value>
   </data>
-  <data name="FirstTrackOfEachLanguageRadioButton" xml:space="preserve">
-    <value>每種語言的第一音軌</value>
+  <data name="EncodeCompleteActionType_DoNothing" xml:space="preserve">
+    <value>Do nothing</value>
   </data>
-  <data name="FirstTrackRadioButton" xml:space="preserve">
-    <value>第一音軌</value>
+  <data name="EncodeCompleteActionType_EjectDisc" xml:space="preserve">
+    <value>Keluarkan {0}:</value>
   </data>
-  <data name="SingleSubtitleDefaultToolTip" xml:space="preserve">
-    <value>標記字幕軌為預設，播放時字幕將自動顯示。</value>
+  <data name="EncodeCompleteActionType_Hibernate" xml:space="preserve">
+    <value>Hibernate</value>
   </data>
-  <data name="MultipleSubtitleDefaultToolTip" xml:space="preserve">
-    <value>標記首個字幕軌為預設，播放時字幕將自動顯示。</value>
+  <data name="EncodeCompleteActionType_LogOff" xml:space="preserve">
+    <value>Log off</value>
   </data>
-  <data name="FirstAsDefaultCheckBox" xml:space="preserve">
-    <value>將第一項標為預設</value>
-    <comment>Label for checkbox to mark the first subtitle as default.</comment>
+  <data name="EncodeCompleteActionType_Shutdown" xml:space="preserve">
+    <value>Matikan</value>
   </data>
-  <data name="AllSubtitlesToolTip" xml:space="preserve">
-    <value>包含所有字幕。</value>
+  <data name="EncodeCompleteActionType_Sleep" xml:space="preserve">
+    <value>Tidur</value>
   </data>
-  <data name="SubtitleNoneToolTip" xml:space="preserve">
-    <value>無包含任何字幕。</value>
+  <data name="Off" xml:space="preserve">
+    <value>Mati</value>
   </data>
-  <data name="AudioFirstToolTip" xml:space="preserve">
-    <value>僅包含第一音軌。</value>
+  
+  
+  <data name="TitleType_Bluray" xml:space="preserve">
+    <value>Blu-ray</value>
+    <comment>What to display when the source is a Blu-ray</comment>
   </data>
-  <data name="AudioAllToolTip" xml:space="preserve">
-    <value>包含所有音軌。</value>
+  <data name="TitleType_Dvd" xml:space="preserve">
+    <value>DVD</value>
+    <comment>What to display when the source is a DVD</comment>
   </data>
-  <data name="SubtitleFirstToolTip" xml:space="preserve">
-    <value>僅包含第一字幕軌。</value>
+  <data name="TitleType_Stream" xml:space="preserve">
+    <value>Berkas</value>
+    <comment>What to display when the source is a file</comment>
   </data>
-  <data name="PresetLabel" xml:space="preserve">
-    <value>使用預設值:</value>
+  <data name="VideoRangeType_Chapters" xml:space="preserve">
+    <value>Bab</value>
   </data>
-  <data name="RemoveLanguageToolTip" xml:space="preserve">
-    <value>移除此語言。</value>
+  <data name="VideoRangeType_Frames" xml:space="preserve">
+    <value>Bingkai</value>
   </data>
-  <data name="SortLanguagesLabel" xml:space="preserve">
-    <value>排序語言至頂端:</value>
-  </data>
-  <data name="ForcedOnlyCheckBox" xml:space="preserve">
-    <value>僅強制</value>
-    <comment>Label for checkbox in Picker window to choose only Forced subtitles of the chosen subtitle track.</comment>
-  </data>
-  <data name="AudioDefaultToolTip" xml:space="preserve">
-    <value>若找到符合項目則選取上次選取的音軌，若否則選取第一音軌。</value>
-  </data>
-  <data name="LastSelectedRadioButton" xml:space="preserve">
-    <value>最後選取</value>
-  </data>
-  <data name="SubtitleLastSelectedToolTip" xml:space="preserve">
-    <value>若找到符合項目則選取上次選取的音軌，若否則不選取音軌。</value>
-    <comment>Tooltip for the "last selected" option for subtitle picker. This will pick the last selected subtitle track if the track index and language match. Otherwise it will select no tracks.</comment>
-  </data>
-  <data name="OverrideNameFormatLabel" xml:space="preserve">
-    <value>可用選項: {0}</value>
+  <data name="VideoRangeType_Seconds" xml:space="preserve">
+    <value>Rentang waktu</value>
   </data>
 </root>
