--- a/VidCoder/Resources/Translations/MainRes.de.resx
+++ b/VidCoder/Resources/Translations/MainRes.de.resx
@@ -191,7 +191,7 @@
     <value>VidCoder Homepage</value>
   </data>
   <data name="ReportABugMenuItem" xml:space="preserve">
-    <value>Einen Fehler melden</value>
+    <value>Fehler melden</value>
   </data>
   <data name="AboutVidCoderMenuItem" xml:space="preserve">
     <value>Über VidCoder...</value>
@@ -227,7 +227,7 @@
     <value>Tonspur hinzufügen</value>
   </data>
   <data name="ChapterMarkersLabel" xml:space="preserve">
-    <value>Kapitel-Markierungen:</value>
+    <value>Kapitelmarken:</value>
   </data>
   <data name="EditButton" xml:space="preserve">
     <value>Bearbeiten...</value>
@@ -603,6 +603,12 @@
 
 {0}</value>
   </data>
-  
-  
+  <data name="FileSizeColumnHeader" xml:space="preserve">
+    <value>Größe</value>
+    <comment>Used on the "completed encodes" tab, to label the column that shows the final output file size.</comment>
+  </data>
+  <data name="OpenAppDataFolder" xml:space="preserve">
+    <value>AppData Ordner öffnen</value>
+    <comment>Menu choice for opening the application data folder (that holds the VidCoder database file, logs, etc)</comment>
+  </data>
 </root>
