--- a/VidCoder/Resources/Translations/MainRes.eu.resx
+++ b/VidCoder/Resources/Translations/MainRes.eu.resx
@@ -609,6 +609,7 @@
   </data>
   <data name="FileSizeColumnHeader" xml:space="preserve">
     <value>Neurria</value>
+    <comment>Used on the "completed encodes" tab, to label the column that shows the final output file size.</comment>
   </data>
   <data name="OpenAppDataFolder" xml:space="preserve">
     <value>Ireki Aplikazioaren Datu Agiritegia</value>
