--- a/VidCoder/Resources/Translations/MainRes.it.resx
+++ b/VidCoder/Resources/Translations/MainRes.it.resx
@@ -605,6 +605,7 @@
   </data>
   <data name="FileSizeColumnHeader" xml:space="preserve">
     <value>Dimensione</value>
+    <comment>Used on the "completed encodes" tab, to label the column that shows the final output file size.</comment>
   </data>
   <data name="OpenAppDataFolder" xml:space="preserve">
     <value>Apri la cartella dati del programma</value>
