--- a/VidCoder/Resources/Translations/MiscRes.de.resx
+++ b/VidCoder/Resources/Translations/MiscRes.de.resx
@@ -255,5 +255,7 @@
   <data name="ChooseNamePicker" xml:space="preserve">
     <value>Wählen Sie einen Namen für den Auswähler:</value>
   </data>
-  
+  <data name="ExceptionDialogSubTextReported" xml:space="preserve">
+    <value>Das Programm muss geschlossen werden, aber der Error wird automatisch gemeldet werden.</value>
+  </data>
 </root>
