--- a/VidCoder/Resources/Translations/MiscRes.id.resx
+++ b/VidCoder/Resources/Translations/MiscRes.id.resx
@@ -117,150 +117,143 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="AudioSelection" xml:space="preserve">
-    <value>音訊選擇</value>
+  <data name="AddButton" xml:space="preserve">
+    <value>Tambah</value>
   </data>
-  <data name="BurnInCheckBox" xml:space="preserve">
-    <value>內嵌</value>
+  <data name="RefreshButton" xml:space="preserve">
+    <value>Perbarui</value>
   </data>
-  <data name="DefaultCheckBox" xml:space="preserve">
-    <value>預設</value>
+  <data name="ChooseFromProcessesLabel" xml:space="preserve">
+    <value>Pilih dari proses yang ada:</value>
   </data>
-  <data name="ForeignAudioSearchRadioButton" xml:space="preserve">
-    <value>外語音訊搜尋</value>
+  <data name="AddAutoPauseProcessDialogTitle" xml:space="preserve">
+    <value>Tambahkan Proses Auto Jeda</value>
   </data>
-  <data name="IncludeAllTracksRadioButton" xml:space="preserve">
-    <value>所有軌道</value>
+  <data name="ProcessNameLabel" xml:space="preserve">
+    <value>Nama Proses:</value>
   </data>
-  <data name="LanguagesRadioButton" xml:space="preserve">
-    <value>語言</value>
+  <data name="ExceptionDialogMainText" xml:space="preserve">
+    <value>VidCoder mengalami kesalahan yang tak terduga.</value>
   </data>
-  <data name="OnlyIfDifferentFromAudioCheckBox" xml:space="preserve">
-    <value>僅於與音訊語言不同時</value>
-    <comment>Label for checkbox on subtitle picker. When checked, it will only include the subtitle if it's a different language from the chosen audio track.</comment>
+  <data name="ExceptionDialogSubText" xml:space="preserve">
+    <value>Laporkan ini sehingga dapat diperbaiki di masa depan.</value>
   </data>
-  <data name="SubtitleSelection" xml:space="preserve">
-    <value>字幕選擇</value>
+  <data name="ExceptionWindowTitle" xml:space="preserve">
+    <value>Pengecualian</value>
   </data>
-  <data name="WindowTitle" xml:space="preserve">
-    <value>選取器: {0}</value>
+  <data name="FileConflictDialogTitle" xml:space="preserve">
+    <value>Konflik file</value>
   </data>
-  <data name="TitleSelection" xml:space="preserve">
-    <value>標題選擇</value>
+  <data name="OverwriteButton" xml:space="preserve">
+    <value>Overwrite</value>
   </data>
-  <data name="PickerButtonFormat" xml:space="preserve">
-    <value>選取器: {0}</value>
-    <comment>{0} is the name of the picker. This string shows up on the picker split button.</comment>
+  <data name="AutoRenameButton" xml:space="preserve">
+    <value>Auto-rename</value>
   </data>
-  <data name="OutputLocation" xml:space="preserve">
-    <value>輸出位置</value>
+  <data name="FileConflictWarning" xml:space="preserve">
+    <value>File sudah ada di {0}. Apakah Anda ingin menimpa file, secara otomatis menemukan jalur output baru untuk pekerjaan encode atau membatalkan pengoperasian?</value>
   </data>
-  <data name="OverrideDirectoryCheckBox" xml:space="preserve">
-    <value>覆寫資料夾:</value>
+  <data name="QueueFileConflictWarning" xml:space="preserve">
+    <value>Pekerjaan antrian yang sudah memiliki jalur output di {0}. Apakah Anda ingin menimpa file, secara otomatis menemukan jalur output baru untuk pekerjaan encode atau membatalkan pengoperasian?</value>
   </data>
-  <data name="PickerHelpText" xml:space="preserve">
-    <value>自動選擇標題、音訊、字幕及目標資料夾</value>
+  <data name="QueueColumnsDialogTitle" xml:space="preserve">
+    <value>Antrian kolom</value>
   </data>
-  <data name="AutoQueueOnScanCheckBox" xml:space="preserve">
-    <value>掃描後自動排入佇列</value>
+  <data name="QueueColumnsDialogHeaderText" xml:space="preserve">
+    <value>Drag dan drop untuk menambahkan, menghapus atau menyusun ulang kolom.</value>
   </data>
-  <data name="AutoEncodeOnScanCheckBox" xml:space="preserve">
-    <value>掃描後開始編碼</value>
+  <data name="UnusedColumns" xml:space="preserve">
+    <value>Kolom yang tidak terpakai</value>
   </data>
-  <data name="UseGlobalSettingToolTip" xml:space="preserve">
-    <value>使用全域設定</value>
-    <comment>Label for the "indeterminate" checkbox state that lets the user know that this will fall back to the global setting</comment>
+  <data name="UsedColumns" xml:space="preserve">
+    <value>Kolom yang digunakan</value>
   </data>
-  <data name="PresetOverrideToolTip" xml:space="preserve">
-    <value>此將覆寫主視窗已選取的任何設定。</value>
+  <data name="ScanMultipleWindowTitle" xml:space="preserve">
+    <value>Memindai...</value>
   </data>
-  <data name="EncodingSection" xml:space="preserve">
-    <value>編碼</value>
-    <comment>The header for the Encoding section in the Picker window.</comment>
+  <data name="AboutVidCoderDialogTitle" xml:space="preserve">
+    <value>Tentang VidCoder</value>
   </data>
-  <data name="PostEncodingSection" xml:space="preserve">
-    <value>後編碼</value>
-    <comment>Header for the post-encoding section in the picker window.</comment>
+  <data name="LicenseLabel" xml:space="preserve">
+    <value>Lisensi:</value>
   </data>
-  <data name="SendFileToLabel" xml:space="preserve">
-    <value>傳送檔案至:</value>
-    <comment>Label for the option to run a program after encoding each file.</comment>
+  <data name="Version" xml:space="preserve">
+    <value>Versi</value>
   </data>
-  <data name="PostEncodeArgumentsLabel" xml:space="preserve">
-    <value>參數:</value>
-    <comment>The label for the arguments to pass to the post-encode executable.</comment>
+  <data name="BasedOnHandBrake" xml:space="preserve">
+    <value>Berdasarkan HandBrake ({0})</value>
   </data>
-  <data name="PostEncodeArgumentsToolTip" xml:space="preserve">
-    <value>要傳遞給程式的參數，使用 {file} 作為檔輸出路徑，{folder} 作為資料夾路徑，或其他路徑選項如 {title} 及 {date} (請參見命名格式)。</value>
-    <comment>Tool tip for the post-encode arguments UI. Do not translate {file} .</comment>
+  <data name="Copyright" xml:space="preserve">
+    <value>© {0} Pengembang VidCoder</value>
   </data>
-  <data name="PresetDisabledForPickerToolTip" xml:space="preserve">
-    <value>選取器已指定預設編碼。</value>
+  <data name="VersionFormat" xml:space="preserve">
+    <value>{0} ({1})</value>
+    <comment>First is version, second is architecture. For example: 1.4.2 (x64)</comment>
   </data>
-  <data name="AddLanguageButton" xml:space="preserve">
-    <value>新增語言</value>
+  <data name="BetaVersionFormat" xml:space="preserve">
+    <value>{0} Beta ({1})</value>
+    <comment>First is version, second is architecture. For example: 1.4.2 Beta (x64)</comment>
   </data>
-  <data name="AllTracksForTheseLanguagesRadioButton" xml:space="preserve">
-    <value>這些語言的所有音軌</value>
+  <data name="NameDialogTitle" xml:space="preserve">
+    <value>Nama</value>
+    <comment>Title for dialog when  naming a preset or  picker</comment>
   </data>
-  <data name="AllTracksForThisLanguageRadioButton" xml:space="preserve">
-    <value>此語言的所有音軌</value>
+  <data name="ChooseNamePreset" xml:space="preserve">
+    <value>Pilih nama untuk preset:</value>
   </data>
-  <data name="FirstTrackOfEachLanguageRadioButton" xml:space="preserve">
-    <value>每種語言的第一音軌</value>
+  <data name="ApplyUpdateDialogTitle" xml:space="preserve">
+    <value>Terapkan pembaruan?</value>
   </data>
-  <data name="FirstTrackRadioButton" xml:space="preserve">
-    <value>第一音軌</value>
+  <data name="ApplyUpdateDialogMessage" xml:space="preserve">
+    <value>Update telah download. Apakah Anda ingin menerapkannya sekarang?</value>
   </data>
-  <data name="SingleSubtitleDefaultToolTip" xml:space="preserve">
-    <value>標記字幕軌為預設，播放時字幕將自動顯示。</value>
+  <data name="ViewFullChangelog" xml:space="preserve">
+    <value>Lihat Changelog lengkap</value>
   </data>
-  <data name="MultipleSubtitleDefaultToolTip" xml:space="preserve">
-    <value>標記首個字幕軌為預設，播放時字幕將自動顯示。</value>
+  <data name="DisableUpdatesButton" xml:space="preserve">
+    <value>Menonaktifkan pembaruan</value>
   </data>
-  <data name="FirstAsDefaultCheckBox" xml:space="preserve">
-    <value>將第一項標為預設</value>
-    <comment>Label for checkbox to mark the first subtitle as default.</comment>
+  <data name="NoticeMessageTitle" xml:space="preserve">
+    <value>Catatan</value>
   </data>
-  <data name="AllSubtitlesToolTip" xml:space="preserve">
-    <value>包含所有字幕。</value>
+  <data name="UnsupportedOSError" xml:space="preserve">
+    <value>VidCoder tidak didukung pada sistem operasi Anda. Windows XP dan Server 2003 tidak lagi bekerja. Silakan instal VidCoder 1.4 atau upgrade sistem operasi Anda.</value>
   </data>
-  <data name="SubtitleNoneToolTip" xml:space="preserve">
-    <value>無包含任何字幕。</value>
+  <data name="EncodeCompleteWarning_SleepTitle" xml:space="preserve">
+    <value>Sistem tidur segera</value>
   </data>
-  <data name="AudioFirstToolTip" xml:space="preserve">
-    <value>僅包含第一音軌。</value>
+  <data name="EncodeCompleteWarning_LogOffTitle" xml:space="preserve">
+    <value>Log off segera</value>
   </data>
-  <data name="AudioAllToolTip" xml:space="preserve">
-    <value>包含所有音軌。</value>
+  <data name="EncodeCompleteWarning_ShutdownTitle" xml:space="preserve">
+    <value>Shutdown sudah dekat</value>
   </data>
-  <data name="SubtitleFirstToolTip" xml:space="preserve">
-    <value>僅包含第一字幕軌。</value>
+  <data name="EncodeCompleteWarning_SleepMessage" xml:space="preserve">
+    <value>Sistem akan tidur dalam {0} detik.</value>
   </data>
-  <data name="PresetLabel" xml:space="preserve">
-    <value>使用預設值:</value>
+  <data name="EncodeCompleteWarning_LogOffMessage" xml:space="preserve">
+    <value>Anda akan log off dalam {0} detik.</value>
   </data>
-  <data name="RemoveLanguageToolTip" xml:space="preserve">
-    <value>移除此語言。</value>
+  <data name="EncodeCompleteWarning_ShutdownMessage" xml:space="preserve">
+    <value>Sistem akan ditutup dalam {0} detik.</value>
   </data>
-  <data name="SortLanguagesLabel" xml:space="preserve">
-    <value>排序語言至頂端:</value>
+  <data name="EncodeCompleteWarning_Title" xml:space="preserve">
+    <value>Pengkodean telah selesai.</value>
   </data>
-  <data name="ForcedOnlyCheckBox" xml:space="preserve">
-    <value>僅強制</value>
-    <comment>Label for checkbox in Picker window to choose only Forced subtitles of the chosen subtitle track.</comment>
+  <data name="CouldNotFindVideoPlayerError" xml:space="preserve">
+    <value>Tidak dapat menemukan pemutar video untuk {0}.</value>
   </data>
-  <data name="AudioDefaultToolTip" xml:space="preserve">
-    <value>若找到符合項目則選取上次選取的音軌，若否則選取第一音軌。</value>
+  <data name="ErrorPlayingSource" xml:space="preserve">
+    <value>Terjadi kesalahan memainkan sumber.</value>
   </data>
-  <data name="LastSelectedRadioButton" xml:space="preserve">
-    <value>最後選取</value>
+  <data name="EncodeCompleteWarning_HibernateMessage" xml:space="preserve">
+    <value>Sistem akan hibernate dalam {0} detik.</value>
   </data>
-  <data name="SubtitleLastSelectedToolTip" xml:space="preserve">
-    <value>若找到符合項目則選取上次選取的音軌，若否則不選取音軌。</value>
-    <comment>Tooltip for the "last selected" option for subtitle picker. This will pick the last selected subtitle track if the track index and language match. Otherwise it will select no tracks.</comment>
+  <data name="EncodeCompleteWarning_HibernateTitle" xml:space="preserve">
+    <value>Hibernate segera</value>
   </data>
-  <data name="OverrideNameFormatLabel" xml:space="preserve">
-    <value>可用選項: {0}</value>
+  <data name="ChooseNamePicker" xml:space="preserve">
+    <value>Pilih nama untuk pemilih:</value>
   </data>
+  
 </root>
