--- a/VidCoder/Resources/Translations/PickerRes.eu.resx
+++ b/VidCoder/Resources/Translations/PickerRes.eu.resx
@@ -258,6 +258,7 @@
   </data>
   <data name="SubtitleLastSelectedToolTip" xml:space="preserve">
     <value>Hautaturiko azken azpidatzi bidea hautatzen du bat etortzea aurkituz gero, bestela biderik ez.</value>
+    <comment>Tooltip for the "last selected" option for subtitle picker. This will pick the last selected subtitle track if the track index and language match. Otherwise it will select no tracks.</comment>
   </data>
   <data name="OverrideNameFormatLabel" xml:space="preserve">
     <value>Aukera eskuragarriak: {0}</value>
