--- a/VidCoder/Resources/Translations/PickerRes.id.resx
+++ b/VidCoder/Resources/Translations/PickerRes.id.resx
@@ -118,149 +118,137 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="AudioSelection" xml:space="preserve">
-    <value>ენის არჩევა</value>
+    <value>Pilihan audio</value>
   </data>
   <data name="BurnInCheckBox" xml:space="preserve">
-    <value>ტიტრის კოდირება</value>
+    <value>Burn In</value>
   </data>
   <data name="DefaultCheckBox" xml:space="preserve">
-    <value>სტანდარტი</value>
+    <value>Standar</value>
   </data>
   <data name="ForeignAudioSearchRadioButton" xml:space="preserve">
-    <value>უცხოენის აუდიოს მოძიება</value>
+    <value>Cari Audio Bahasa Asing</value>
   </data>
   <data name="IncludeAllTracksRadioButton" xml:space="preserve">
-    <value>ყველა წყარო</value>
+    <value>Semua trek</value>
   </data>
   <data name="LanguagesRadioButton" xml:space="preserve">
-    <value>ენა(ები)</value>
+    <value>Pengelolaan Bahasa</value>
   </data>
   <data name="OnlyIfDifferentFromAudioCheckBox" xml:space="preserve">
-    <value>მხოლოდ თუ აუდიო გაგსხვავებულ ენაზეა</value>
+    <value>Hanya jika bahasa berbeda dari Audio</value>
     <comment>Label for checkbox on subtitle picker. When checked, it will only include the subtitle if it's a different language from the chosen audio track.</comment>
   </data>
   <data name="SubtitleSelection" xml:space="preserve">
-    <value>ტიტრის არჩევა</value>
+    <value>Pilihan subjudul</value>
   </data>
   <data name="WindowTitle" xml:space="preserve">
-    <value>ამომრჩევი: {0}</value>
+    <value>Picker: {0}</value>
   </data>
   <data name="TitleSelection" xml:space="preserve">
-    <value>სახელის არჩევა</value>
+    <value>Pilihan subjudul</value>
   </data>
   <data name="PickerButtonFormat" xml:space="preserve">
-    <value>ამომრჩევი: {0}</value>
+    <value>Picker: {0}</value>
     <comment>{0} is the name of the picker. This string shows up on the picker split button.</comment>
   </data>
   <data name="OutputLocation" xml:space="preserve">
-    <value>დასამახსოვრებელი ადგილი</value>
+    <value>Pengaturan output</value>
   </data>
   <data name="OverrideDirectoryCheckBox" xml:space="preserve">
-    <value>ფოლდერის გადაწერა:</value>
+    <value>Mengganti direktori:</value>
   </data>
   <data name="PickerHelpText" xml:space="preserve">
-    <value>ავტომატური სახელის, აუდიოს, ტიტრის და დასამახსოვრებელი ადგილის არჩევა</value>
+    <value>Secara otomatis memilih judul, audio, teks dan tujuan</value>
   </data>
   <data name="AutoQueueOnScanCheckBox" xml:space="preserve">
-    <value>სკანირების დასრულებისას დავალების სიაში დამატება</value>
+    <value>Otomatis antrian setelah pemindaian</value>
   </data>
   <data name="AutoEncodeOnScanCheckBox" xml:space="preserve">
-    <value>კოდირება სკანირების დასრულებისას</value>
+    <value>Mulai pengkodean setelah scan</value>
   </data>
   <data name="UseGlobalSettingToolTip" xml:space="preserve">
-    <value>ძირითადი პარამეტრების გამოყენება</value>
+    <value>Gunakan pengaturan global</value>
     <comment>Label for the "indeterminate" checkbox state that lets the user know that this will fall back to the global setting</comment>
   </data>
   <data name="PresetOverrideToolTip" xml:space="preserve">
-    <value>გადააწერს ყველაფერს, ძირითად ფანჯარაში არჩეულ შაბლონს.</value>
+    <value>Ini akan menimpa setiap preset yang dipilih di jendela utama.</value>
   </data>
   <data name="EncodingSection" xml:space="preserve">
-    <value>კოდირება</value>
+    <value>Pengkodean</value>
     <comment>The header for the Encoding section in the Picker window.</comment>
   </data>
   <data name="PostEncodingSection" xml:space="preserve">
-    <value>პოსტკოდირება</value>
+    <value>Pasca encoding</value>
     <comment>Header for the post-encoding section in the picker window.</comment>
   </data>
   <data name="SendFileToLabel" xml:space="preserve">
-    <value>ფაილის გაგზავნა:</value>
+    <value>Mengirim file ke:</value>
     <comment>Label for the option to run a program after encoding each file.</comment>
   </data>
   <data name="PostEncodeArgumentsLabel" xml:space="preserve">
-    <value>არგუმენტები:</value>
+    <value>Argumen:</value>
     <comment>The label for the arguments to pass to the post-encode executable.</comment>
   </data>
-  <data name="PostEncodeArgumentsToolTip" xml:space="preserve">
-    <value>პროგრამის სამოქმედო არგუმენტებისთვის გამოიყენეთ {file} დასამახსოვრებელი ფაილისთვის, {folder} დასამახსოვრებელი ფოლდერისთვის ან სხვა პარამეტრები, როგორიცაა {title} და {date} (იხილეთ სახელის ფორმატები).</value>
-    <comment>Tool tip for the post-encode arguments UI. Do not translate {file} .</comment>
-  </data>
+  
   <data name="PresetDisabledForPickerToolTip" xml:space="preserve">
-    <value>კოდირების შაბლონი დადგენილია ამომრჩევის მიერ.</value>
+    <value>Picker telah ditentukan dengan preset encoding.</value>
   </data>
   <data name="AddLanguageButton" xml:space="preserve">
-    <value>ენის დამატება</value>
+    <value>Tambahkan Bahasa</value>
   </data>
   <data name="AllTracksForTheseLanguagesRadioButton" xml:space="preserve">
-    <value>ამ ენის ყველა წყარო</value>
+    <value>Semua trek untuk bahasa-bahasa ini</value>
   </data>
   <data name="AllTracksForThisLanguageRadioButton" xml:space="preserve">
-    <value>ამ ენისთვის ყველა წყარო</value>
+    <value>Semua trek untuk bahasa-bahasa ini</value>
   </data>
   <data name="FirstTrackOfEachLanguageRadioButton" xml:space="preserve">
-    <value>ყველა ენის პირველი წყარო</value>
+    <value>Trek pertama dari tiap bahasa</value>
   </data>
   <data name="FirstTrackRadioButton" xml:space="preserve">
-    <value>პირველი წყარო</value>
+    <value>Trek pertama</value>
   </data>
   <data name="SingleSubtitleDefaultToolTip" xml:space="preserve">
-    <value>თუ ტიტრის სყარო სტანდარტადაა არჩეული, ვიდეოს რეპროდუქციისას ავტომატურად წარმოისახება.</value>
+    <value>Tandai jalur subjudul sebagai standar, sehingga itu akan muncul secara otomatis ketika bermain video.</value>
   </data>
   <data name="MultipleSubtitleDefaultToolTip" xml:space="preserve">
-    <value>თუ ტიტრის სყარო პირველადადაა არჩეული, ვიდეოს რეპროდუქციისას ავტომატურად წარმოისახება.</value>
+    <value>Tandai jalur subjudul sebagai standar, sehingga itu akan muncul secara otomatis ketika bermain video.</value>
   </data>
   <data name="FirstAsDefaultCheckBox" xml:space="preserve">
-    <value>პირველის სტანდარტად არჩევა</value>
+    <value>Tandai pertama sebagai default</value>
     <comment>Label for checkbox to mark the first subtitle as default.</comment>
   </data>
   <data name="AllSubtitlesToolTip" xml:space="preserve">
-    <value>ყველა ტიტრის გამოყენება.</value>
+    <value>Termasuk semua sub judul.</value>
   </data>
   <data name="SubtitleNoneToolTip" xml:space="preserve">
-    <value>ტიტრის გარეშე.</value>
+    <value>Ada sub judul juga disertakan.</value>
   </data>
   <data name="AudioFirstToolTip" xml:space="preserve">
-    <value>მხოლოდ პირველი აუდიოს გამოყენება.</value>
+    <value>Termasuk hanya audio lagu pertama.</value>
   </data>
   <data name="AudioAllToolTip" xml:space="preserve">
-    <value>ყველა აუდიოს გამოყენება.</value>
+    <value>Termasuk semua trek.</value>
   </data>
   <data name="SubtitleFirstToolTip" xml:space="preserve">
-    <value>მხოლოდ პირველი ტიტრის გამოყენება.</value>
+    <value>Termasuk hanya audio lagu pertama.</value>
   </data>
   <data name="PresetLabel" xml:space="preserve">
-    <value>შაბლონი:</value>
+    <value>Menggunakan preset:</value>
   </data>
   <data name="RemoveLanguageToolTip" xml:space="preserve">
-    <value>ამ ენის წაშლა.</value>
+    <value>Hapus bahasa ini.</value>
   </data>
   <data name="SortLanguagesLabel" xml:space="preserve">
-    <value>ენის(ების) თავში გადანაცვლება:</value>
+    <value>Urutkan bahasa ke atas:</value>
   </data>
   <data name="ForcedOnlyCheckBox" xml:space="preserve">
-    <value>მხოლოდ დაძალებული</value>
+    <value>Hanya 'Forced'</value>
     <comment>Label for checkbox in Picker window to choose only Forced subtitles of the chosen subtitle track.</comment>
   </data>
-  <data name="AudioDefaultToolTip" xml:space="preserve">
-    <value>დამთხვევისას ბოლოს არჩეული აუდიოს შენარჩუნდება, სხვა შემთხვევაში პირველის არჩევა.</value>
-  </data>
-  <data name="LastSelectedRadioButton" xml:space="preserve">
-    <value>ბოლოს გამოყენებული</value>
-  </data>
-  <data name="SubtitleLastSelectedToolTip" xml:space="preserve">
-    <value>დამთხვევისას ბოლოს არჩეული ტიტრის შენარჩუნდება, სხვა შემთხვევაში წყაროს გარეშე.</value>
-    <comment>Tooltip for the "last selected" option for subtitle picker. This will pick the last selected subtitle track if the track index and language match. Otherwise it will select no tracks.</comment>
-  </data>
-  <data name="OverrideNameFormatLabel" xml:space="preserve">
-    <value>დაშვებული პარამეტრებია: {0}</value>
-  </data>
+  
+  
+  
+  
 </root>
