--- a/VidCoder/Resources/Translations/PickerRes.it.resx
+++ b/VidCoder/Resources/Translations/PickerRes.it.resx
@@ -258,6 +258,7 @@
   </data>
   <data name="SubtitleLastSelectedToolTip" xml:space="preserve">
     <value>Utilizza l'ultima traccia dei sottotitoli selezionata, se viene trovata una corrispondenza, altrimenti non viene utilizzato alcun sottotitolo.</value>
+    <comment>Tooltip for the "last selected" option for subtitle picker. This will pick the last selected subtitle track if the track index and language match. Otherwise it will select no tracks.</comment>
   </data>
   <data name="OverrideNameFormatLabel" xml:space="preserve">
     <value>Opzioni disponibili: {0}</value>
