--- a/VidCoder/Resources/MainRes.resx
+++ b/VidCoder/Resources/MainRes.resx
@@ -144,9 +144,6 @@
   <data name="ExportPreset" xml:space="preserve">
     <value>Export Preset...</value>
   </data>
-  <data name="OptionsMenuItem" xml:space="preserve">
-    <value>Options...</value>
-  </data>
   <data name="Play" xml:space="preserve">
     <value>Play</value>
   </data>
@@ -621,5 +618,9 @@
   </data>
   <data name="OpenSourceRibbonButton" xml:space="preserve">
     <value>Open source</value>
+  </data>
+  <data name="ImportExportRibbonButton" xml:space="preserve">
+    <value>Import/Export</value>
+    <comment>Label for ribbon button to import or export presets or queues</comment>
   </data>
 </root>
