--- a/VidCoder/Resources/MiscRes.resx
+++ b/VidCoder/Resources/MiscRes.resx
@@ -186,13 +186,9 @@
   <data name="Copyright" xml:space="preserve">
     <value>© {0} VidCoder Developers</value>
   </data>
-  <data name="VersionFormat" xml:space="preserve">
-    <value>{0} ({1})</value>
-    <comment>First is version, second is architecture. For example: 1.4.2 (x64)</comment>
-  </data>
   <data name="BetaVersionFormat" xml:space="preserve">
-    <value>{0} Beta ({1})</value>
-    <comment>First is version, second is architecture. For example: 1.4.2 Beta (x64)</comment>
+    <value>{0} Beta</value>
+    <comment>{0} is a placeholder for version. For example: 1.4.2 Beta</comment>
   </data>
   <data name="NameDialogTitle" xml:space="preserve">
     <value>Name</value>
