--- a/VidCoder/Resources/Translations/MiscRes.zh.resx
+++ b/VidCoder/Resources/Translations/MiscRes.zh.resx
@@ -124,7 +124,7 @@
     <value>刷新</value>
   </data>
   <data name="ChooseFromProcessesLabel" xml:space="preserve">
-    <value>从已有进程中选取：</value>
+    <value>从现有进程中选取：</value>
   </data>
   <data name="AddAutoPauseProcessDialogTitle" xml:space="preserve">
     <value>添加自动暂停进程</value>
@@ -253,7 +253,9 @@
     <value>立即休眠</value>
   </data>
   <data name="ChooseNamePicker" xml:space="preserve">
-    <value>为选取器取名：</value>
+    <value>为选择器取名：</value>
   </data>
-  
+  <data name="ExceptionDialogSubTextReported" xml:space="preserve">
+    <value>本程序需关闭，错误将被自动报告。</value>
+  </data>
 </root>
