--- a/VidCoder/Resources/Translations/QueueTitlesRes.zh.resx
+++ b/VidCoder/Resources/Translations/QueueTitlesRes.zh.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="OverrideTitleNumberToolTip" xml:space="preserve">
-    <value>选中此项时，将覆盖正常标题以创建输出文件的名称。例如原标题为 2、3、4，当以 7 覆盖时输出文件将标记为 7、8、9。此功能在转录电视剧集时很有帮助。</value>
+    <value>选中时，将改写正常标题来创建输出文件名称。例如原标题2、3、4改写为7，文件会标记为 7、8、9。此功能在转录碟片中的电视剧时很有用。</value>
   </data>
   <data name="QueueTitlesWindowHeader" xml:space="preserve">
     <value>选择多个标题添加至队列。</value>
