Updated subtitle summary line.

--- a/VidCoder/Resources/SubtitleRes.resx
+++ b/VidCoder/Resources/SubtitleRes.resx
@@ -174,4 +174,15 @@
   <data name="SubtitleCharsetDetectionFailedMessage" xml:space="preserve">
     <value>Could not detect the encoding of the subtitle file. To make sure the subtitles show up correctly, re-save the file as UTF-8.</value>
   </data>
+  <data name="NoSubtitlesText" xml:space="preserve">
+    <value>No subtitles on the source video.</value>
+  </data>
+  <data name="ExternalSubtitlesSummaryFormat" xml:space="preserve">
+    <value>{0} external</value>
+    <comment>{0} is the number of external subtitle tracks included. e.g. "5 external"</comment>
+  </data>
+  <data name="SubtitleSelectedOverTotalTracksFormat" xml:space="preserve">
+    <value>{0}/{1} track(s)</value>
+    <comment>{0} is the number of selected subtitle tracks and {1} is the number of total subtitle tracks on the source.</comment>
+  </data>
 </root>
